# cellarium-workflows

./: MANIFEST.in  README.md  pyproject.toml
cellarium/workflows/: kfp_helpers.py
cellarium/workflows/example/: components.py  pipelines.py  submit_example_pipeline.py
requirements/: base.txt
